# optsw-ctrl

./: .flake8  LICENSE  README.md  optsw-ctrl  optsw-ctrl.py  pyproject.toml  scpi.py
preset/: 33500B_1pps_signal.txt  33500B_initialization.txt  33500B_output_for_100Hz_switch.txt  33500B_output_for_10Hz_switch.txt  33500B_output_for_1Hz_switch.txt  33500B_output_for_200Hz_switch.txt  33500B_output_for_20Hz_switch.txt  33500B_output_for_2Hz_switch.txt  33500B_output_for_50Hz_switch.txt  33500B_output_for_5Hz_switch.txt  33500B_trigger_for_100Hz_switch.txt  33500B_trigger_for_10Hz_switch.txt  33500B_trigger_for_1Hz_switch.txt  33500B_trigger_for_200Hz_switch.txt  33500B_trigger_for_20Hz_switch.txt  33500B_trigger_for_2Hz_switch.txt  33500B_trigger_for_50Hz_switch.txt  33500B_trigger_for_5Hz_switch.txt  3390_1Hz_switch_EE.txt  3390_1Hz_switch_EF.txt  3390_1Hz_switch_EG.txt  3390_1Hz_switch_FF.txt  3390_1Hz_switch_FG.txt  3390_1Hz_switch_GG.txt  3390_initialization.txt  3390_output_for_1.0Hz_switch_GE.txt  3390_output_for_1Hz_switch_EE.txt  3390_output_for_1Hz_switch_FF.txt  3390_output_for_1Hz_switch_GE.txt  3390_output_for_1Hz_switch_GG.txt  3390_trigger.txt
scripts/: pgpreset  setup
