[tool.poetry]
name = "optsw-ctrl"
version = "0.1.0"
description = "Scripts for controlling optical switch by pattern generator"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b"
flake8 = "^3.8"
ipython = "^7.16"
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
